# feeder-vision

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  manifest.json
.github/workflows/: linux-release.yml  macos-release.yml  windows-release.yml
.zed/: tasks.json
crates/app_gui/: Cargo.toml  build.rs
crates/app_gui/i18n/de-DE/: main.ftl
crates/app_gui/i18n/en-US/: main.ftl
crates/app_gui/i18n/es-ES/: main.ftl
crates/app_gui/i18n/fr-FR/: main.ftl
crates/app_gui/i18n/nl-NL/: main.ftl
crates/app_gui/i18n/sv-SE/: main.ftl
crates/app_gui/src/: app.rs  export.rs  i18n.rs  main.rs  manifest.rs  model.rs  roboflow.rs  settings_store.rs
crates/app_gui/src/app/: folder.rs  settings.rs
crates/feeder_core/: Cargo.toml
crates/feeder_core/src/: lib.rs
docs/: en.html  index.html  script.js  styles.css
installer/: FeedieInstaller.iss
installer/linux/: feedie.desktop
models/: feeder-labels.csv  feeder-vision_EfficientViT-training.ipynb  feeder_vision_efficientvit_training.py
scripts/: build_appimage.sh  ci.ps1  progress.ps1  spec_check.ps1
specs/: product-spec.md  scenarios.md  tasks.md
tests/: e2e_spec.rs
